--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,7 @@
 #map {
-  	height: 100%;
+	height: 90%;
+	width: 100%;
+	text-align: center;
 }
 /* Optional: Makes the sample page fill the window. */
 html, body {
@@ -9,7 +11,7 @@ html, body {
 }
 
 #floating-panel {
-	position: absolute;
+	position: static;
 	top: 10px;
 	left: 25%;
 	z-index: 5;
